--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>MABELAX</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="./style.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   </head>
   <body>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 		<div id="wrapper">
 			<h1 id="title">Background<br>Erasor</h1>
 			<h1 id="title2">Background<br>Erasor</h1>
@@ -28,8 +28,8 @@
 				id="screen-text">insert your picture</label>
 				<input type="file" id="uploadBtn">
 			</div>
-			<div id="shadow"></div>
-			<div id="bottom"></div>
 		</div>
+		<div id="shadow"></div>
+		<div id="bottom"></div>
   </body>
 </html>
