--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 				<div id="screen">
 					<label for="uploadBtn" class="btn_file"
 					id="screen-text">insert your picture</label>
-					<input type="file" id="uploadBtn" onchange="LoadImage(this)">
+					<input type="file" name="fileToUpload" id="uploadBtn" onchange="LoadImage(this)">
+					<input type="submit" value="submit">
 				</div>
 			</form>
 			<iframe id='iframe1' name='iframe1' src="">
